--- a/Camera_PhotoLibrary/Base.lproj/Main.storyboard
+++ b/Camera_PhotoLibrary/Base.lproj/Main.storyboard
@@ -15,9 +15,58 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Favorite Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eO-Ok-Uhh">
+                                <rect key="frame" x="20" y="73" width="318" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IJA-KA-9B5">
+                                <rect key="frame" x="20" y="143" width="374" height="255"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wcU-8y-wmE">
+                                <rect key="frame" x="20" y="469" width="115" height="31"/>
+                                <color key="backgroundColor" red="0.20648261239999999" green="0.49593497349999999" blue="0.9573284755" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Choose Photo">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="OpenPhotosLibrary:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gRc-dM-ioY"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAz-kC-4Pk">
+                                <rect key="frame" x="301.5" y="469" width="92.5" height="31"/>
+                                <color key="backgroundColor" red="0.20648261239999999" green="0.49593497349999999" blue="0.9573284755" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Open Cam">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="OpenCam:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QOn-oR-z37"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="wcU-8y-wmE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="5Ha-cN-tQc"/>
+                            <constraint firstItem="3eO-Ok-Uhh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="89i-gd-VQX"/>
+                            <constraint firstItem="3eO-Ok-Uhh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="29" id="EZF-ZN-ylj"/>
+                            <constraint firstItem="IJA-KA-9B5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ld9-gd-idY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3eO-Ok-Uhh" secondAttribute="trailing" constant="76" id="Ses-ZQ-35w"/>
+                            <constraint firstItem="IJA-KA-9B5" firstAttribute="top" secondItem="3eO-Ok-Uhh" secondAttribute="bottom" constant="34" id="ddg-DF-IZw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cAz-kC-4Pk" secondAttribute="trailing" constant="20" id="f4a-sa-oUp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wcU-8y-wmE" secondAttribute="bottom" constant="362" id="m3i-tb-QdD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cAz-kC-4Pk" secondAttribute="bottom" constant="362" id="nwJ-Mk-9Bq"/>
+                            <constraint firstItem="wcU-8y-wmE" firstAttribute="top" secondItem="IJA-KA-9B5" secondAttribute="bottom" constant="71" id="q1U-em-5At"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IJA-KA-9B5" secondAttribute="trailing" constant="20" id="vgI-fZ-o6q"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myImageView" destination="IJA-KA-9B5" id="30V-lp-uHf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
