--- a/Camera_PhotoLibrary/Base.lproj/Main.storyboard
+++ b/Camera_PhotoLibrary/Base.lproj/Main.storyboard
@@ -15,9 +15,57 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Favorite Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Vb-Nx-Lgb">
+                                <rect key="frame" x="43" y="119" width="150" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="169" translatesAutoresizingMaskIntoConstraints="NO" id="UGs-af-Cvs">
+                                <rect key="frame" x="10" y="540" width="394" height="48"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWl-rt-wxF">
+                                        <rect key="frame" x="0.0" y="0.0" width="112.5" height="48"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Choose Photo"/>
+                                        <connections>
+                                            <action selector="OpenPhotosLibrary:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YqW-eI-YFJ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S3H-Rs-2fO">
+                                        <rect key="frame" x="281.5" y="0.0" width="112.5" height="48"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Open Cam"/>
+                                        <connections>
+                                            <action selector="OpenCam:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vEi-Yh-L9I"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7DQ-Cs-hh4">
+                                <rect key="frame" x="20" y="229" width="374" height="241"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="241" id="ovz-yM-mee"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="UGs-af-Cvs" secondAttribute="trailing" constant="10" id="2df-Jf-k8b"/>
+                            <constraint firstItem="7DQ-Cs-hh4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="C1N-yB-ZEu"/>
+                            <constraint firstItem="1Vb-Nx-Lgb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="75" id="CER-f4-DFh"/>
+                            <constraint firstItem="7DQ-Cs-hh4" firstAttribute="top" secondItem="1Vb-Nx-Lgb" secondAttribute="bottom" constant="89.5" id="EZz-tz-mXc"/>
+                            <constraint firstItem="UGs-af-Cvs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="GNx-kA-wmI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7DQ-Cs-hh4" secondAttribute="trailing" constant="20" id="IHt-qM-yrx"/>
+                            <constraint firstItem="UGs-af-Cvs" firstAttribute="top" secondItem="7DQ-Cs-hh4" secondAttribute="bottom" constant="70" id="Ixy-j5-GtL"/>
+                            <constraint firstItem="1Vb-Nx-Lgb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="43" id="QNF-9s-pVS"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myImageView" destination="7DQ-Cs-hh4" id="aQS-h8-k7v"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
